# BuzzMini

./: .gitignore  BuzzMini.spec  LICENSE  NOTICE  README.md  README.ru.md  planning.md  project.md  pyproject.toml  requirements-ci.txt
.github/workflows/: ci.yml
buzz_dictate/: __main__.py  app.py  audio_ptt.py  engine.py  model_download.py  models_catalog.py  models_dialog.py  ptt_chord.py  settings_dialog.py  settings_store.py
buzz_mini/: __main__.py  app.py  audio_devices.py  audio_ptt.py  cuda_setup.py  donate_dialog.py  download_progress.py  engine.py  log_panel.py  main_window.py  model_download.py  models_catalog.py  models_dialog.py  overlay.py  paths.py  ptt_chord.py  settings_dialog.py  settings_store.py
installer/: BuzzMini.nsi  release.json
scripts/: run-buzz-mini.bat
tools/: build_installer.ps1  build_release_payload.ps1  build_windows.ps1  ci_install_deps.py  ci_smoke.py  ensure_7zr.ps1  measure_venv.py  smoke_test.py
