[project]
name = "buzz-dictate"
version = "0.1.0"
description = "Minimal local GPU dictation (push-to-talk) — spun out from Buzz ideas"
requires-python = ">=3.12,<3.15"
dependencies = [
    "huggingface-hub>=0.26,<1",
    "faster-whisper>=1.2.1,<2",
    "numpy>=1.21",
    "sounddevice>=0.5.3,<0.6",
    "PyQt6>=6.6,<7",
    "pynput>=1.7.6,<2",
    "platformdirs>=4.2,<5",
    "torch>=2.9,<3",
    "torchaudio>=2.9,<3",
    "nvidia-cudnn-cu12>=9,<10; sys_platform != 'darwin'",
]

[project.scripts]
buzz-dictate = "buzz_dictate.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["buzz_dictate"]

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
torch = [
    { index = "pypi", marker = "sys_platform == 'darwin'" },
    # PyTorch's cu129 index currently ships Linux wheels only; Windows needs cu126 (or another cu12x build).
    { index = "pytorch-cu126", marker = "sys_platform == 'win32'" },
    { index = "pytorch-cu129", marker = "sys_platform != 'darwin' and sys_platform != 'win32'" },
]
torchaudio = [
    { index = "pypi", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu126", marker = "sys_platform == 'win32'" },
    { index = "pytorch-cu129", marker = "sys_platform != 'darwin' and sys_platform != 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
